# LaCasitaBooking

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  DOCKER_START_GUIDE.md  Dockerfile  Dockerfile.prod  Dockerfile.test  GIT_GUIDE.md  LOG_ANALYSIS_GUIDE.md  SETUP_GUIDE.md  app.py  clean_wasp_install.sh  docker-compose.yml  git-setup.sh  local_dev.sh  pyproject.toml  render.yaml  requirements.txt  requirements_backup.txt  run-docker.sh  start-background.sh  start_project.sh  stop-docker.sh  troubleshoot.sh  wasp_troubleshoot.sh
frontend/: App.js
frontend/backups/: app.jsold  app.jsoldb
reservation-backend/: package-lock.json  package.json  server.js  test-server.js
wasp-core/: main.wasp
wasp-core/src/client/components/: QRScanner.jsx
wasp-core/src/client/pages/: Dashboard.jsx
wasp-core/src/client/pages/auth/: Login.jsx  Signup.jsx
wasp-core/src/server/: serverSetup.js
