[tool.poetry]
name = "la-casita-booking"
version = "0.1.0"
description = "Restaurant Reservation System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.2"
Flask-Cors = "3.0.10"
Flask-Mail = "0.9.1"
python-dotenv = "1.0.0"
requests = "2.31.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"